# HomeCopy

./: .env.example  .gitignore  AGENTS.md  README-macOS.md  README.md  RELEASING.md  package_macos.command  pyproject.toml
.github/workflows/: publish-pypi.yml
Common/homecopy_shared/: __init__.py  client_runtime.py  file_transfer.py  history_service.py  main_window.py  startup_policy.py  ui_formatting.py
HomeCopy/: .gitignore
HomeCopy/MacOS/: .gitignore  package_macos.command
MacOS/: package_macos.command
MacOS/homecopy/: __init__.py  paths.py
Windows/: .env.example  .gitignore  CODEX.md  README.md  TODO.md  client_config.example.json  electron.vite.config.ts  homecopy_system_design.md  index.html  package-lock.json  package.json  start_client.bat  tsconfig.json
Windows/electron/: main.ts  preload.ts
Windows/homecopy/: paths.py
Windows/scripts/: build_client.py  dev.cjs  start_server.py  stop_all.py
Windows/server/processing-server/: README.md  config.example.yaml  pyproject.toml  run.ps1
Windows/server/processing-server/src/omi_processing/: cli.py  config.py  fits_header.py  formatting.py  models.py  scanner.py
Windows/server/processing-server/tests/: test_config.py  test_scanner.py
Windows/src/: App.tsx  styles.css
docs/: REWRITE_DESIGN.md
homecopy/: __init__.py
homecopy/Windows/: .gitignore  README.md  build_client.bat  install_all.bat  requirements.txt  start_server.bat  stop_all.bat  stop_server.bat
homecopy/client/: discovery.py  launcher_main.py  main.py  startup.py
homecopy/server/: app.py  (+3 more)
scripts/: install_local_cli.py
(+99 files in other folders)
