[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HomeCopy"
version = "0.10.0"
description = "Installer CLI for building the HomeCopy desktop app from GitHub source."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Tommy-OMI" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.scripts]
homecopy = "homecopy_installer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["homecopy_installer*"]
